--- a/climate-quest-frontend/src/App.css
+++ b/climate-quest-frontend/src/App.css
@@ -3,7 +3,17 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #EADDCA;
+  background-color: #2EB5E5;
+  /* background-color: #007ced;*/
+  /* background: linear-gradient(to bottom, #007ced 1%,#cce7ff 100%); */
+  /* background: linear-gradient(to bottom, #007ced 30%,#EADDCA 100%); */
+  /* background: #007ced; */
+  background: linear-gradient(30deg, #EADDCA 84%, #2EB5E5 25%);
+
+  background-attachment: fixed;
+  background-size: cover;
+  font-family: Arial, sans-serif;
+  color: #ffffff; 
 }
 
 .airplane {
@@ -73,12 +83,12 @@ body {
   font-family: Arial, sans-serif;
   /* background: radial-gradient(circle at 48.7% 44.3%, #0099cc 0%, #006699 22.9%, #003366 76.7%, #000033 100.2%); */
   /* background: radial-gradient(circle at -8.9% 51.2%, rgb(255, 223, 0) 0%, rgb(255, 223, 0) 15.9%, rgb(255, 165, 0) 15.9%, rgb(255, 165, 0) 24.4%, rgb(0, 124, 255) 24.5%, rgb(0, 124, 255) 66%); */
-  background: radial-gradient(circle at -8.9% 51.2%, rgb(173, 216, 230) 0%, rgb(173, 216, 230) 15.9%, rgb(100, 149, 237) 15.9%, rgb(100, 149, 237) 24.4%, rgb(0, 127, 255) 24.5%, rgb(0, 127, 255) 66%);
+  /* background: radial-gradient(circle at -8.9% 51.2%, rgb(173, 216, 230) 0%, rgb(173, 216, 230) 15.9%, rgb(100, 149, 237) 15.9%, rgb(100, 149, 237) 24.4%, rgb(0, 127, 255) 24.5%, rgb(0, 127, 255) 66%); */
     /* background: radial-gradient(circle at -8.9% 51.2%, rgb(0, 0, 139) 0%, rgb(0, 0, 139) 15.9%, rgb(100, 149, 237) 15.9%, rgb(100, 149, 237) 24.4%, rgb(173, 216, 230) 24.5%, rgb(173, 216, 230) 66%); */
     /* background: radial-gradient(circle at -8.9% 51.2%, rgb(0, 0, 128) 0%, rgb(0, 0, 128) 15.9%, rgb(70, 130, 220) 15.9%, rgb(70, 130, 220) 24.4%, rgb(135, 206, 235) 24.5%, rgb(135, 206, 235) 66%); */
-    /* background: radial-gradient(circle at -8.9% 51.2%, rgb(173, 216, 230) 0%, rgb(173, 216, 230) 15.9%, rgb(135, 173, 235) 15.9%, rgb(135, 173, 235) 24.4%, rgb(85, 116, 191) 24.5%, rgb(85, 116, 191) 66%); */
-
-    color: white;
+    background: radial-gradient(circle at -8.9% 51.2%, rgb(173, 216, 230) 0%, rgb(173, 216, 230) 15.9%, rgb(135, 173, 235) 15.9%, rgb(135, 173, 235) 24.4%, #2EB5E5 24.5%, #2EB5E5 66%);
+    /* background: #2EB5E5; */
+    /* color: white; */
     font-weight: bold; 
     border: 0;
     border-radius: 3;
@@ -175,4 +185,131 @@ body {
 
 .new-blue-button:hover {
   background-color: rgb(0, 90, 180);
+}
+
+/* .switch {
+  position: relative;
+} */
+
+/* .switch label {
+  width: 55px;
+  height: 23px;
+  background-color: #999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50px;
+}
+
+.switch input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.switch label:after {
+  content: '';
+  width: 21px;
+  height: 21px;
+  border-radius: 50px;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  transition: 100ms;
+  background-color: white;
+}
+
+.switch .look:checked + label:after {
+  left: 32px;
+}
+
+.switch .look:checked + label {
+  background-color: lightsteelblue;
+} */
+
+
+
+
+#cloud {
+  background: rgba(255, 255, 255);
+  width: 300px; 
+  height: 100px;
+  border-radius: 150px;	
+  box-shadow: 10px 10px rgba(0,0,0,0.2);
+  animation: move 3s infinite;
+}
+
+#cloud:after {
+  content: '';
+  background: rgba(255, 255, 255);
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  top: -50px;
+  left: 50px;
+}
+
+#cloud:before {
+  content: '';
+  background: rgba(255, 255, 255);
+  position: absolute;
+  width: 170px;
+  height: 150px;
+  border-radius: 50%;
+  top: -90px;
+  right: 40px;
+}
+
+@keyframes move {
+  0% {
+    transform: translatex(0);
+  }
+
+}
+
+.switch {
+  width: 80px;
+  height: 40px;
+  text-align: center;
+  background: #ddd;
+  transition: all 0.2s ease;
+  border-radius: 2px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.switch span {
+  width: 20px;
+  height: 4px;
+  background: #fff;
+  display: block;
+  transition: all 0.2s ease;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+.switch label {
+  cursor: pointer;
+  color: rgba(0,0,0,0.2);
+  line-height: 40px;
+  font-size: 2em;
+  transition: all 0.2s ease;
+  width: 50%;
+  display: inline-block;
+  text-align: center;
+}
+
+#plus:checked ~ .switch label[for=plus] {
+  background: #4CAF50;
+  color: #fff;
+}
+#minus:checked ~ .switch label[for=minus] {
+  background: #E91E63;
+  color: #fff;
+}
+
+#plus:checked ~ .switch span {
+  margin-left: -8px;
 }
